Complete part 1 starting part 2
